deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: codingground-backend
  namespace: codingground-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: backend
    spec:
      serviceAccountName: s3uploadrole
      containers:
      - name: codingground-backend
        image: 503237308475.dkr.ecr.ca-central-1.amazonaws.com/codingground-backend:v0.5.0
        ports:
        - containerPort: 8090
