service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-rule
spec:
  selector:
    app: backend
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8090
